--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,66 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --foreground-rgb: 0, 0, 0;
+  --background: #fff;
+  --gradient-color: #000;
+}
+
+html,
+body {
+  @apply dark:text-white text-slate-800 dark:bg-slate-900 bg-white;
+}
+
+p {
+  @apply pb-4;
+}
+h1 {
+  @apply text-4xl font-bold my-3;
+}
+h2 {
+  @apply text-2xl font-bold my-3;
+}
+
+.gonews .newsblock {
+  @apply flex gap-3 my-6 bg-gray-50 dark:bg-slate-800 flex-col sm:flex-row;
+}
+.gonews h2 {
+  @apply text-2xl font-bold;
+}
+
+.newscontent {
+  @apply pt-2 px-2 sm:px-0;
+}
+.gonews p {
+  @apply text-[14px];
+}
+.newsimg {
+  @apply p-4;
+}
+.newsimg img {
+  @apply object-cover sm:h-40 sm:w-48 sm:min-w-48 w-full;
+}
+.newsinfo {
+  @apply flex gap-3 my-2;
+}
+.newsinfo .item {
+  @apply flex gap-1 content-center text-xs;
+}
+.newslinks {
+  @apply flex justify-between pr-0 sm:pr-8 pb-2;
+}
+.newslinks button,
+.newslinks a {
+  @apply flex sm:gap-2 gap-1 items-center text-sm font-semibold hover:text-blue-600 dark:hover:text-blue-400;
+}
+.newslinks svg {
+  @apply fill-red-500;
+}
+.single {
+  @apply px-5 py-2 md:px-10 md:py-5 bg-slate-50 dark:bg-slate-800;
+}
+.newsart {
+  @apply flex flex-col gap-5 w-full;
+}
