--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,9 @@ h1 {
 h2 {
   @apply text-2xl font-bold my-3;
 }
+h3 {
+  @apply text-xl font-bold my-3;
+}
 
 .gonews .newsblock {
   @apply flex gap-3 my-6 bg-gray-50 dark:bg-slate-800 flex-col sm:flex-row;
@@ -63,4 +66,36 @@ h2 {
 }
 .newsart {
   @apply flex flex-col gap-5 w-full;
+}
+
+/* mainpage left & right sides css */
+.maincontent {
+  @apply flex flex-col md:flex-row gap-5;
+}
+.mainleft {
+  @apply basis-full md:basis-3/4 order-2 md:order-1;
+}
+.mainright {
+  @apply basis-full md:basis-1/4 order-1 md:order-2 mt-20;
+}
+.rightnewsblock {
+  @apply bg-gray-50 dark:bg-slate-800 rounded-md mb-6 p-3;
+}
+.rightnewsblock ul li {
+  @apply mb-4 text-[14px] font-bold hover:text-blue-600 dark:hover:text-blue-400 border-l-2 border-red-500;
+}
+.rightnewsblock ul li a {
+  @apply inline-block ml-[5px];
+}
+.catlink {
+  @apply flex sm:gap-2 gap-2 items-center text-sm font-semibold hover:text-blue-600 dark:hover:text-blue-400 justify-end;
+}
+.catlink svg {
+  @apply fill-red-500;
+}
+.catlink:hover svg {
+  @apply fill-blue-600 dark:fill-blue-400;
+}
+.rightnewsblock h3 {
+  @apply bg-slate-800 dark:bg-slate-900 text-white py-1 px-3 mb-5 font-semibold text-base;
 }
